fix(products): thumb size on mobile

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -109,7 +109,7 @@ footer #site-social {     margin-bottom: 20px;}
 }
 
 .site-product .img-rounded {
-    width: 300px;
+    width: 220px;
     height: 200px;
 }
 
